infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # name of the deployment
  name: comments-depl
spec:
  # no of containers to be made
  replicas: 1
  selector:
    # will looks for the template with app: comments
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          # never use :<specific-version>, use :latest instead
          # image: hstha/microservice/blog/comments:0.0.1
          image: hstha/microservice/blog/comments:latest

          # after you update the image than run
          # kutectl rollout restart deployment <deployment-name>

---
# Node Port Service
apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      portocol: TCP
      port: 4001 # node port
      targetPort: 4001 # target where your server is running
